<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share_quote"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/score_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textColor="@color/com_facebook_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="0"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/share_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/congratulations_you_have_finished_this_quiz"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/button_finish"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:background="@drawable/buttonshape"
        android:onClick="finishQuiz"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:background="@drawable/buttonshape"
        android:onClick="share"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/share_result"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavView_Bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:itemIconTint="#4682B3"
        app:itemTextColor="#4682B3"
        app:menu="@menu/main_menu">

    </android.support.design.widget.BottomNavigationView>

</RelativeLayout>
