<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_title"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="221dp"
        android:layout_height="154dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_login_image" />

    <LinearLayout
        android:id="@+id/prof_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"></com.google.android.gms.common.SignInButton>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp" />

</LinearLayout>
